--- a/index.html
+++ b/index.html
@@ -15,11 +15,28 @@
     </head>
     <body background="background1.jpg">
         <center>
-            <h1 id="header" class="btn-info">A.I Ping Pong <button id="instructions" class="btn btn-info" data-toggle="modal" data-target="#myModal">Instructions</button></h1>
+            <h1 id="header" class="btn-info">A.I Ping Pong <button id="instruction_btn" class="btn btn-info" data-toggle="modal" data-target="#myModal">Instructions</button></h1>
             <br><br>
             <button class="btn btn-success" onclick="startGame()">Play</button>
             <h1 class="btn btn-danger"></h1>
-            <div></div>
+            <button class="btn btn-danger" onclick="restart()">Restart</button>
+            <h4 id="footer">
+                Developed By - Eric Joseph
+            </h4>
+            <div id="myModal" class="modal fade">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button class="close" data-dismiss="modal">&times;</button>
+                      <h4>Instructions</h4>
+                    </div>
+                    <div class="modal-body">
+                      
+                    </div>
+                  </div>
+                </div>
+            </div>
+            
 
         </center>
 
