--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <button class="btn btn-success" onclick="startGame()">Play</button>
             <h1 class="btn btn-danger"></h1>
             <button class="btn btn-danger" onclick="restart()">Restart</button>
+            <div id="game_console"></div>
             <h4 id="footer">
                 Developed By - Eric Joseph
             </h4>
